; ModuleID = '/home/carl/AnghaBench/wrk/src/extr_script.c_script_push_thread.c'
source_filename = "/home/carl/AnghaBench/wrk/src/extr_script.c_script_push_thread.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [11 x i8] c"wrk.thread\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @script_push_thread(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32**, align 8
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = call i64 @lua_newuserdata(i32* %6, i32 8)
  %8 = inttoptr i64 %7 to i32**
  store i32** %8, i32*** %5, align 8
  %9 = load i32*, i32** %4, align 8
  %10 = load i32**, i32*** %5, align 8
  store i32* %9, i32** %10, align 8
  %11 = load i32*, i32** %3, align 8
  %12 = call i32 @luaL_getmetatable(i32* %11, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0))
  %13 = load i32*, i32** %3, align 8
  %14 = call i32 @lua_setmetatable(i32* %13, i32 -2)
  ret void
}

declare dso_local i64 @lua_newuserdata(i32*, i32) #1

declare dso_local i32 @luaL_getmetatable(i32*, i8*) #1

declare dso_local i32 @lua_setmetatable(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
